--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,13 @@
   color: black;
 }
 .footer{
-
   font-family: 'Libre Barcode 39 Text', cursive;
   background-color: black;
   color: white;
   margin-top: 20px;
   text-align: center;
 }
-.main{
-
+.main {
+  display: flex; /*dsetting the container to be flex*/
+  justify-content: center; /*centering content*/
 }
