--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <!-- VENDOR SCRIPTS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <!-- APPLICATION SCRIPTS -->
     <script src="../assets/scripts/app.js"></script>
     <!-- fonts -->
@@ -23,6 +25,35 @@
       </div>
     </div>
     <div class="main">
+      <!-- Button trigger modal -->
+      <button data-target="#playlistModal" data-toggle="modal" id="playlist-modal-toggle" type="button" class="btn btn-primary">
+        Create a Playlist
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="playlistModal" tabindex="-1" role="dialog" aria-labelledby="playlistModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <!-- modal content -->
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="playlistModalLabel">Playlist Creator</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <p>Name your Playlist</p>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="footer">
       <h2>&copy;javascriptforlife & balbini</h2>
