--- a/views/index.html
+++ b/views/index.html
@@ -42,13 +42,13 @@
               </button>
             </div>
             <div class="modal-body">
+              <p>Name your Playlist</p>
               <form>
-                <p>Name your Playlist</p>
+                <input type="text">
+                <input type="submit">
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
