index.ejs and modal work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,16 @@
   display: flex; /*dsetting the container to be flex*/
   justify-content: center; /*centering content*/
 }
+.margin-top-20 {
+	margin-top:20px;
+}
+.playlist-container {
+	padding:20px 0;
+	background-color:#FFF;
+	transition:all 0.3s linear;
+}
+
+.playlist-container:hover {
+	background-color:#DDD;
+	transition:all 0.3s ease-in-out;
+}
