--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,31 @@
       <button data-target="#playlistModal" data-toggle="modal" id="playlist-modal-toggle" type="button" class="btn btn-primary">
         Create a Playlist
       </button>
-      
-    </div>
+      <!-- Modal -->
+        <div class="modal fade" id="playlistModal" tabindex="-1" role="dialog" aria-labelledby="playlistModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <!-- modal content -->
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="playlistModalLabel">Playlist Creator</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>Name your Playlist. Name it after a Genre or Specific Idea.</p>
+                <form>
+                  <input type="text">
+                  <input type="submit">
+                </form>
+              </div>
+              <div class="modal-footer">
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     <div class="footer">
       <h2>&copy;javascriptforlife & balbini</h2>
     </div>
