--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@
   /*opacity: 0.5;*/
   font-family: 'Anton', sans-serif;
   color: black;
+
+}
+.jumbotron-header2{
+  text-align: center;
+  font-family: 'Anton', sans-serif;
 }
 .footer{
   font-family: 'Libre Barcode 39 Text', cursive;
@@ -20,7 +25,7 @@
   margin-top: 20px;
   text-align: center;
 }
-.container {
+.container-modal{
   display: flex; /*dsetting the container to be flex*/
   justify-content: center; /*centering content*/
 }
