--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,13 +7,13 @@
     <title>MicDrop.Com</title>
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- VENDOR SCRIPTS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <!-- APPLICATION SCRIPTS -->
-    <script src="../assets/scripts/app.js"></script>
+    <script src="/scripts/app.js"></script>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Libre+Barcode+39+Text" rel="stylesheet">
@@ -22,9 +22,10 @@
     <div class="jumbotron">
       <div class="container">
       <h1 class="jumbotron-header">Welcome to micdrop.com</h1>
-      </div>
+      <h1 class="jumbotron-header2">Create your own Playlists</h1>
     </div>
-  <div class="container">
+    </div>
+  <div class="container-modal">
   	<div class="margin-top-20">
   		<button data-toggle="modal" data-target="#add-playlist-modal" class="btn btn-primary">Add New Playlist</button>
   	</div>
@@ -66,7 +67,7 @@
       </div>
     </div>
 </div>
-  <% playlists.forEach((playlist) => { %> -->
+  <% playlists.forEach((playlist) => { %>
   <!--One Playlist -->
   <div class="row">
     <div class="col-sm-9">
@@ -80,6 +81,8 @@
         <div>
           <span class="bold">Description: </span><span><%= playlist.description %></span>
         </div>
+        <button type="submit" class="btn btn-primary">Edit Playlist</button>
+        <button type="submit" class="btn btn-danger">Delete Playlist</button>
       </div>
     </div>
   </div>
