--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,40 +86,37 @@
             <div id="edit-playlist-modal-<%= playlist.id%>" class="modal fade">
               <div class="modal-dialog"> <!-- why does this exist -->
                 <div class="modal-content">
-                  <form method="POST" action="/playlists/">
                     <div class="modal-header">
                       <button type="button" clas="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> <!-- Why does this convention exist -->
                       <h4 class="modal-title">Edit Playlist</h4>
                     </div>
                     <div class="modal-body">
-                      <div class="bold">
-                        Playlist Name:
-                      </div>
-                      <div class="margin-top-20">
-                        <input name="playlist[name]" type="text" class="form-control" value="<%= playlist.name %>"/>
-                      </div>
-                      <div class="bold margin-top-20">
-                        Bands and Tracks (Insert comma between each track):
-                      </div>
-                      <div class="margin-top-20">
-                        <input name="playlist[tracks]" type="text" class="form-control" value="<%= playlist.tracks %>"/>
-                      </div>
-                      <div class="bold margin-top-20">
-                        Description
-                      </div>
-                      <div class="margin-top-20">
-                        <input name="playlist[description]" class="form-control" value="<%= playlist.description %>">
-                      </div>
+                      <form method="POST" action="/playlists/<%= playlist.id %>?_method=put">
+                        <div class="bold">
+                          Playlist Name:
+                        </div>
+                        <div class="margin-top-20">
+                          <input name="name" type="text" class="form-control" value="<%= playlist.name %>"/>
+                        </div>
+                        <div class="bold margin-top-20">
+                          Bands and Tracks (Insert comma between each track):
+                        </div>
+                        <div class="margin-top-20">
+                          <input name="tracks" type="text" class="form-control" value="<%= playlist.tracks %>"/>
+                        </div>
+                        <div class="bold margin-top-20">
+                          Description
+                        </div>
+                        <div class="margin-top-20">
+                          <input name="description" class="form-control" value="<%= playlist.description %>">
+                        </div>
+                        <button type="submit" class="btn btn-default">Save Changes</button>
+                      </form>
                     </div>
-                  </form>
                     <div class="modal-footer">
                     	<form method="POST" action="/playlists/<%= playlist.id %>?_method=delete">
                     		<button type="submit" class="btn btn-danger">Delete</button>
                     	</form>
-                      <form method="POST" action="/playlists/<%= playlist.id %>?_method=put">
-                        <button type="submit" class="btn btn-default">Save Changes</button>
-                      </form>
-                      <!-- <button id= "delete-playlist" type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button> -->
                       <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
