--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  <script src="/scripts/app.js"></script>
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Anton|Libre+Barcode+39+Text" rel="stylesheet">
@@ -69,8 +68,8 @@
   </div>
   <% playlists.forEach((playlist) => { %>
     <!--One Playlist -->
-    <div class="row">
-      <div class="col-sm-9">
+    <div class="row playlist-container">
+      <div class="col-sm-9 ml-sm-auto">
         <div class="margin-top-20">
           <span class="bold">Playlist Name: </span><span><%= playlist.name %></span>
         </div>
