--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,16 +30,16 @@
     </div>
     <!-- Add Playlist Modal -->
     <div id="add-playlist-modal" class="modal fade">
-      <div class="modal-dialog"> <!-- why does this exist -->
+      <div class="modal-dialog">
         <div class="modal-content">
           <form method="POST" action="/playlists">
             <div class="modal-header">
               <button type="button" clas="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> <!-- Why does this convention exist -->
-              <h4 class="modal-title">Add New Playlist and Get Rekt</h4>
+              <h4 class="modal-title">Add A New Playlist and Get Rekt</h4>
             </div>
             <div class="modal-body">
               <div class="bold">
-                Name your playlist, based off a genre or mood:
+                Name your playlist, based off a genre or mood (or don't):
               </div>
               <div class="margin-top-20">
                 <input name="playlist[name]" type="text" class="form-control" placeholder="Djent Playlist"/>
@@ -80,12 +80,12 @@
           <div>
             <span class="bold">Description: </span><span><%= playlist.description %></span>
           </div>
-          <div class="container-modal">
+          <!-- <div class="container-modal">  -->
             <div class="margin-top-20">
               <button data-toggle="modal" data-target="#edit-playlist-modal-<%= playlist.id %>" class="btn btn-primary">Edit Playlist</button>
             </div>
             <div id="edit-playlist-modal-<%= playlist.id%>" class="modal fade">
-              <div class="modal-dialog"> <!-- why does this exist -->
+              <div class="modal-dialog"> 
                 <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" clas="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> <!-- Why does this convention exist -->
@@ -123,8 +123,7 @@
                 </div>
               </div>
             </div>
-            <!-- <button type="submit" class="btn btn-danger">Delete Playlist</button> -->
-          </div>
+          <!-- </div> -->
         </div>
       </div>
     </div>
