--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  <script src="/js/app.js"></script>
+
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Anton|Libre+Barcode+39+Text" rel="stylesheet">
@@ -34,7 +37,7 @@
         <div class="modal-content">
           <form method="POST" action="/playlists">
             <div class="modal-header">
-              <button type="button" clas="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> <!-- Why does this convention exist -->
+              <button type="button" clas="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h4 class="modal-title">Add A New Playlist and Get Rekt</h4>
             </div>
             <div class="modal-body">
@@ -80,15 +83,15 @@
           <div>
             <span class="bold">Description: </span><span><%= playlist.description %></span>
           </div>
-          <!-- <div class="container-modal">  -->
             <div class="margin-top-20">
               <button data-toggle="modal" data-target="#edit-playlist-modal-<%= playlist.id %>" class="btn btn-primary">Edit Playlist</button>
+              <button data-toggle="modal" data-target="#edit-tracklist-modal-<%= playlist.id %>" class="btn btn-primary">Edit Tracklist</button>
             </div>
             <div id="edit-playlist-modal-<%= playlist.id%>" class="modal fade">
-              <div class="modal-dialog"> 
+              <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                      <button type="button" clas="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> <!-- Why does this convention exist -->
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                       <h4 class="modal-title">Edit Playlist</h4>
                     </div>
                     <div class="modal-body">
@@ -123,7 +126,30 @@
                 </div>
               </div>
             </div>
-          <!-- </div> -->
+            <div id="edit-tracklist-modal-<%= playlist.id%>" class="modal fade">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title">Edit Tracklist</h4>
+                    </div>
+                    <div class="modal-body">
+                      <form method="POST" action="/playlists/<%= playlist.id %>?_method=put">
+                        <div class="bold margin-top-20">
+                          Bands and Tracks (Insert comma between each track):
+                        </div>
+                        <div class="margin-top-20">
+                          <input name="tracks" type="text" class="form-control" value="<%= playlist.tracks %>"/>
+                        </div>
+                        <button type="submit" class="btn btn-default">Save Changes</button>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </div>
